Changed initial background to avoid flickering when switching to title

--- a/css/notengalaxie.css
+++ b/css/notengalaxie.css
@@ -8,7 +8,7 @@ body {
 
 #gameContainer {
 	position: relative;
-	background-color: black;
+	background-color: white;
 	background-image: url("../images/title-01.png");
 	background-size: contain;
 	background-repeat: no-repeat;
